Test cases covered for Movie service create()